fix(jdk): Disable UseBiasedLocking feature (#4316)